# aiorak

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
examples/: chat_client.py  chat_server.py  client.py  echo_client.py  echo_server.py  example_client.py  multi_client.py  ping.py  proxy.py  server.py
src/aiorak/: __init__.py  _bitstream.py  _client.py  _congestion.py  _connection.py  _constants.py  _exceptions.py  _reliability.py  _server.py  _transport.py  _types.py  _wire.py  client.py  connection.py  constants.py  exceptions.py  protocol.py  rak_peer.py  reliability.py  server.py  sliding_window.py  stream.py  types.py
tests/: common_functions.py  conftest.py  test_api_errors.py  test_big_packet.py  test_bitstream.py  test_burst.py  test_client.py  test_client_coverage.py  test_comprehensive.py  test_concurrent_clients.py  test_congestion.py  test_connect.py  test_connect_disconnect.py  test_connection.py  test_connection_churn.py  test_connection_handshake.py  test_connection_state.py  test_cross_connection.py  test_data.py  test_dropped_connection.py  test_eight_peer.py  test_exceptions.py  test_flow_control.py  test_hardening.py  test_init_coverage.py  test_integration_coverage.py  test_malicious_client.py  test_many_clients.py  test_max_connections.py  test_message_size.py  test_offline_messages.py  test_offline_ping.py  test_ping.py  test_reliability.py  test_reliability_modes.py  test_reliable_ordered.py  test_server.py  test_server_client.py  test_server_coverage.py  test_stress.py  (+6 more)
