[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiorak"
version = "0.1.0"
dependencies = [
    "asyncio"
]
requires-python = ">=3.8"
authors = [
    { name = "Zhengyu Wu", email = "magicdroidx@gmail.com" },
]
description = "RakNet implementation for Python using asyncio"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["raknet", "udp", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python"
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]
