[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiorak"
version = "0.1.0"
requires-python = ">=3.10"
authors = [
    { name = "Vincent Wu", email = "magicdroidx@gmail.com" },
]
description = "RakNet implementation for Python using asyncio"
readme = "README.md"
license = "MIT"
keywords = ["raknet", "udp", "asyncio", "networking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/wu-vincent/aiorak"
Repository = "https://github.com/wu-vincent/aiorak"
Issues = "https://github.com/wu-vincent/aiorak/issues"
Changelog = "https://github.com/wu-vincent/aiorak/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "timeout: set a timeout for the test (informational only)",
]

[tool.coverage.run]
source = ["aiorak"]

[tool.coverage.report]
show_missing = true
skip_empty = true
